# schedule-creator

./: .gitignore  CLAUDE.md  CONSTRAINTS.md  README.md  main.py  plan.md  pyproject.toml  run_main.sh
.claude/commands/: update-constraints.md
.claude/rules/: constraints.md  goals.md  resident_comments.md
.github/workflows/: python-app.yml
schedule_maker/: __init__.py  staffing_utils.py
schedule_maker/io/: __init__.py  dryrun_writer.py  excel_reader.py  excel_writer.py  prefs_parser.py  prefs_writer.py
schedule_maker/models/: __init__.py  constraints.py  resident.py  rotation.py  schedule.py
schedule_maker/optimization/: __init__.py  config.py  local_search.py
schedule_maker/phases/: __init__.py  night_float.py  r1_assignment.py  r2_assignment.py  r3_builder.py  r4_builder.py  sampler.py
schedule_maker/solver/: __init__.py  nf_solver.py  track_matcher.py
schedule_maker/validation/: __init__.py  equity_report.py  graduation.py  hospital_conflict.py  report.py  staffing.py
tests/: conftest.py  generate_dummy_prefs.py  test_constraints.py  test_optimization.py  test_prefs_parser.py  test_schedule_soft.py
