[project]
name = "schedule-maker"
version = "0.1.0"
description = "Automates building academic radiology residency schedules from preference surveys"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "ortools>=9.12",
    "click>=8.1",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]
